Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-125142

[REG 6.7.0->6.7.1] Can't deploy to iOS/iOS simulator: ASSERT: "m_view.window" in file qioswindow.mm

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P0: Blocker P0: Blocker
    • 6.7.2, 6.8.0 FF
    • 6.7.1
    • Build System
    • macOS 13.5.1 x64
      Xcode 15.2
    • iOS/tvOS/watchOS
    • c195fe7d3 (6.7.1), 6c36e21be (dev), d43c9b024 (6.7)

      Install Qt 6.7.1 iOS binaries, include Qt Creator, CMake and Ninja to installation.

      Launch Creator, open any example, tested with demos/calqlator, configure and build works, but when deploying either to iOS device or iOS simulator, application is deployed, and it opens for a second, showing only white screen and then disappears. Creator Application output has:

      14:06:35: Starting remote process.
      QML debugging is enabled. Only use this in a safe environment.
      ASSERT: "m_view.window" in file /Users/qt/work/qt/qtbase/src/plugins/platforms/ios/qioswindow.mm, line 308
      14:06:37: Run ended. 

      Machine where binaries are installed doesn't have that path, apparently it's coin build path.

        For Gerrit Dashboard: QTBUG-125142
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            joaijala Johanna Äijälä
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes