iOS: Always call setParent during QIOSWindow construction

We rely on setParent for parenting top level windows into our desktop
manager view, so we can't condition the call on having a parent window,
like we do on other platforms.

This was a regression from 988039729f55a5e62e32b82c6f29ff7457e91d9d.

Fixes: QTBUG-125142
Change-Id: I2884d77db09cba5371ccd77eabda7ce38c0292de
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>
(cherry picked from commit 6c36e21bec1197e933ee1fbe14bd18936544d32a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>